--- a/index.html
+++ b/index.html
@@ -3,96 +3,180 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evoxa — AI Automation for Local Businesses</title>
+    <title>Evoxa — AI Websites & Automation</title>
 
     <!-- SEO -->
-    <meta name="description" content="Evoxa builds AI chatbots, voice agents, and automation systems for barbers, salons, and local businesses. Get more bookings with AI.">
-    <meta name="keywords" content="AI chatbot, AI voice agent, automation, barber website, salon booking system, Evoxa">
-    <meta name="author" content="Evoxa Automation">
+    <meta name="description" content="Evoxa builds AI-powered websites, chatbots, and automation systems for local businesses. Surreal, space-grade automation.">
+    <meta name="keywords" content="Evoxa, AI chatbot, AI receptionist, automation, barbers, salons, AI websites, websites, AI">
+    <meta name="author" content="Evoxa">
 
-    <!-- Open Graph (for social sharing) -->
-    <meta property="og:title" content="Evoxa — AI Automation for Local Businesses">
-    <meta property="og:description" content="AI chatbots and voice agents that help barbers and salons get more bookings.">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Evoxa — Automation from Another Dimension">
+    <meta property="og:description" content="AI chatbots, websites, and automation that feel like they’re from another universe.">
     <meta property="og:type" content="website">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+    <div class="starfield"></div>
+    <div class="starfield starfield-2"></div>
+
     <header class="fade-in">
         <div class="container nav-container">
-            <h1 class="logo">Evoxa</h1>
+            <div class="logo-wrap">
+                <div class="logo-orbit"></div>
+                <h1 class="logo">Evoxa</h1>
+            </div>
             <nav>
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
-                <a href="#contact" class="cta">Book a Demo</a>
+                <a href="#how-it-works">How It Works</a>
+                <a href="#contact" class="cta">Get Started</a>
             </nav>
         </div>
     </header>
 
     <section class="hero fade-in-up">
         <div class="container hero-content">
-            <h2>AI Automation That Works While You Sleep</h2>
-            <p>We build AI chatbots, voice agents, and booking systems for barbers, salons, and trades — helping you get more customers 24/7.</p>
-            <a href="#contact" class="btn-primary">Book a Free Demo</a>
+            <h2>Automation from Another Dimension.</h2>
+            <p>We build AI‑powered websites, chatbots, and receptionists that work while you sleep — so your business feels like it’s running on alien technology.</p>
+            <a href="#contact" class="btn-primary">Launch with Evoxa</a>
+            <p class="hero-sub">Perfect for barbers, salons, and local businesses that want to feel premium without paying agency‑level retainers.</p>
         </div>
     </section>
 
-    <section id="features" class="features fade-in-up">
+    <section id="features" class="section features fade-in-up">
         <div class="container">
-            <h2 class="section-title">What We Build</h2>
+            <h2 class="section-title">What We Launch for You</h2>
             <div class="feature-grid">
                 <div class="feature-card slide-up">
-                    <h3>AI Chatbot</h3>
-                    <p>Answers questions, books appointments, and handles customers instantly.</p>
+                    <h3>AI Website</h3>
+                    <p>A fast, modern, space‑themed website that makes your business look like it’s from the future.</p>
                 </div>
                 <div class="feature-card slide-up">
-                    <h3>AI Voice Agent</h3>
-                    <p>Handles calls, takes bookings, and responds like a real human.</p>
+                    <h3>AI Chat Assistant</h3>
+                    <p>Answers questions, captures leads, and supports your customers 24/7 — powered by GPT‑4o mini.</p>
                 </div>
                 <div class="feature-card slide-up">
-                    <h3>Website Setup</h3>
-                    <p>We build a clean, modern website that converts visitors into customers.</p>
+                    <h3>AI Receptionist (Partnered)</h3>
+                    <p>We connect you with premium AI phone agents through partners like Ulio and Landingsite‑powered stacks.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="pricing" class="pricing fade-in-up">
+    <section id="how-it-works" class="section how-it-works fade-in-up">
         <div class="container">
-            <h2 class="section-title">Simple Pricing</h2>
-            <div class="price-card slide-up">
-                <h3>Setup Package</h3>
-                <p class="price">£199 one-time</p>
-                <ul>
-                    <li>AI Chatbot Setup</li>
-                    <li>AI Voice Agent Setup</li>
-                    <li>Website Included</li>
-                    <li>Full Integration</li>
-                </ul>
-                <a href="#contact" class="btn-primary">Get Started</a>
+            <h2 class="section-title">How Evoxa Works</h2>
+            <div class="steps">
+                <div class="step-card slide-up">
+                    <span class="step-number">01</span>
+                    <h3>Discovery</h3>
+                    <p>We understand your business, services, and how you want customers to experience you.</p>
+                </div>
+                <div class="step-card slide-up">
+                    <span class="step-number">02</span>
+                    <h3>Build & Integrate</h3>
+                    <p>We build your website, plug in AI chat, and connect to partner tools like Landingsite and Ulio.</p>
+                </div>
+                <div class="step-card slide-up">
+                    <span class="step-number">03</span>
+                    <h3>Launch & Optimise</h3>
+                    <p>We go live, track usage, and refine your flows so every visitor feels guided, not sold to.</p>
+                </div>
             </div>
         </div>
     </section>
 
-    <section id="contact" class="contact fade-in-up">
+    <section id="pricing" class="section pricing fade-in-up">
         <div class="container">
-            <h2 class="section-title">Book a Free Demo</h2>
-            <p>Leave your details and we’ll reach out within 24 hours.</p>
+            <h2 class="section-title">Pricing That Actually Makes Sense</h2>
+            <div class="pricing-grid">
+                <div class="price-card slide-up">
+                    <h3>Launch Site</h3>
+                    <p class="price">£50 one‑time</p>
+                    <ul>
+                        <li>Custom Evoxa‑themed website</li>
+                        <li>Mobile‑ready & fast</li>
+                        <li>Basic analytics setup</li>
+                        <li>AI chat widget installed</li>
+                    </ul>
+                </div>
+                <div class="price-card slide-up">
+                    <h3>Site Care</h3>
+                    <p class="price">£25 / month</p>
+                    <ul>
+                        <li>Hosting & maintenance</li>
+                        <li>Content & copy updates</li>
+                        <li>Minor design tweaks</li>
+                        <li>Monitoring & support</li>
+                    </ul>
+                </div>
+                <div class="price-card slide-up">
+                    <h3>AI Add‑Ons</h3>
+                    <p class="price">Custom</p>
+                    <ul>
+                        <li>AI chat assistant (usage‑based)</li>
+                        <li>AI receptionist via partners</li>
+                        <li>Automation flows & follow‑ups</li>
+                        <li>Usage tracking & reporting</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="section contact fade-in-up">
+        <div class="container">
+            <h2 class="section-title">Book a Free Launch Call</h2>
+            <p>Tell us about your business and we’ll show you what Evoxa can automate for you.</p>
             <form id="contactForm">
-                <input type="text" placeholder="Your Name" required>
-                <input type="text" placeholder="Business Name" required>
-                <input type="email" placeholder="Email Address" required>
-                <button type="submit" class="btn-primary">Submit</button>
+                <input type="text" id="name" placeholder="Your Name" required>
+                <input type="text" id="business" placeholder="Business Name" required>
+                <input type="email" id="email" placeholder="Email Address" required>
+                <button type="submit" class="btn-primary">Send</button>
             </form>
         </div>
     </section>
 
-    <!-- Chatbot Placeholder -->
-    <div id="chatbot-container"></div>
+    <!-- Premium Evoxa Chat Widget -->
+    <div id="evoxa-chat-widget">
+        <div id="evoxa-chat-button">
+            <span>💬</span>
+        </div>
+
+        <div id="evoxa-chat-window">
+            <div id="evoxa-chat-header">
+                <div class="chat-header-left">
+                    <div class="chat-avatar">E</div>
+                    <div>
+                        <h3>Evoxa Assistant</h3>
+                        <p>AI Support • Online</p>
+                    </div>
+                </div>
+                <div class="chat-header-right">
+                    <span class="chat-dot"></span>
+                </div>
+            </div>
+
+            <div id="evoxa-chat-messages"></div>
+
+            <div id="evoxa-chat-typing">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+
+            <div id="evoxa-chat-input-area">
+                <input id="evoxa-chat-input" placeholder="Ask Evoxa anything...">
+                <button id="evoxa-chat-send">➤</button>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
