--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evoxa — AI Websites & Automation</title>
+    <title>Evoxa — Websites & Automation for Small Businesses</title>
 
     <!-- SEO -->
-    <meta name="description" content="Evoxa builds AI-powered websites, chatbots, and automation systems for local businesses. Surreal, space-grade automation.">
-    <meta name="keywords" content="Evoxa, AI chatbot, AI receptionist, automation, barbers, salons, AI websites, websites, AI">
+    <meta name="description" content="Evoxa builds modern websites and integrates AI tools like live chat and phone assistants for small businesses.">
+    <meta name="keywords" content="Evoxa, AI, automation, website, live chat, AI receptionist, Ulio, ChatBot, LiveChat">
     <meta name="author" content="Evoxa">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Evoxa — Automation from Another Dimension">
-    <meta property="og:description" content="AI chatbots, websites, and automation that feel like they’re from another universe.">
+    <meta property="og:title" content="Evoxa — Websites & Automation for Small Businesses">
+    <meta property="og:description" content="Professional websites and AI integrations for barbers, salons, trades, clinics, and local businesses.">
     <meta property="og:type" content="website">
 
     <!-- Fonts -->
@@ -34,36 +34,44 @@
             <nav>
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
-                <a href="#how-it-works">How It Works</a>
-                <a href="#contact" class="cta">Get Started</a>
+                <a href="#ai-solutions">AI Solutions</a>
+                <a href="contact.html">Contact</a>
+                <a href="login.html" class="cta">Login</a>
+                <a href="billing.html" class="cta">Billing</a>
             </nav>
         </div>
     </header>
 
     <section class="hero fade-in-up">
         <div class="container hero-content">
-            <h2>Automation from Another Dimension.</h2>
-            <p>We build AI‑powered websites, chatbots, and receptionists that work while you sleep — so your business feels like it’s running on alien technology.</p>
-            <a href="#contact" class="btn-primary">Launch with Evoxa</a>
-            <p class="hero-sub">Perfect for barbers, salons, and local businesses that want to feel premium without paying agency‑level retainers.</p>
+            <h2>Websites and Automation That Help You Grow</h2>
+            <p>We build fast, modern websites and integrate AI tools like live chat and phone assistants — helping your business respond faster, look more professional, and convert more customers.</p>
+
+            <a href="https://calendly.com/harshal-work-ai64254/evoxa-appointment"
+               class="btn-primary"
+               target="_blank">
+               Book a Free Consultation
+            </a>
+
+            <p class="hero-sub">Perfect for barbers, salons, trades, clinics, and local businesses that want affordable, reliable digital tools.</p>
         </div>
     </section>
 
     <section id="features" class="section features fade-in-up">
         <div class="container">
-            <h2 class="section-title">What We Launch for You</h2>
+            <h2 class="section-title">What We Set Up for You</h2>
             <div class="feature-grid">
                 <div class="feature-card slide-up">
-                    <h3>AI Website</h3>
-                    <p>A fast, modern, space‑themed website that makes your business look like it’s from the future.</p>
+                    <h3>Modern Business Website</h3>
+                    <p>A clean, mobile‑ready website that makes your business look trustworthy and easy to work with.</p>
                 </div>
                 <div class="feature-card slide-up">
-                    <h3>AI Chat Assistant</h3>
-                    <p>Answers questions, captures leads, and supports your customers 24/7 — powered by GPT‑4o mini.</p>
+                    <h3>AI Live Chat Setup</h3>
+                    <p>We integrate ChatBot + LiveChat so your visitors get instant answers and smooth handover to you or your team.</p>
                 </div>
                 <div class="feature-card slide-up">
-                    <h3>AI Receptionist (Partnered)</h3>
-                    <p>We connect you with premium AI phone agents through partners like Ulio and Landingsite‑powered stacks.</p>
+                    <h3>AI Phone Assistant Setup</h3>
+                    <p>We connect you with AI receptionists via partners like Ulio — handling missed calls, bookings, and follow‑ups automatically.</p>
                 </div>
             </div>
         </div>
@@ -76,17 +84,17 @@
                 <div class="step-card slide-up">
                     <span class="step-number">01</span>
                     <h3>Discovery</h3>
-                    <p>We understand your business, services, and how you want customers to experience you.</p>
+                    <p>We learn about your business, services, and what you want customers to experience.</p>
                 </div>
                 <div class="step-card slide-up">
                     <span class="step-number">02</span>
                     <h3>Build & Integrate</h3>
-                    <p>We build your website, plug in AI chat, and connect to partner tools like Landingsite and Ulio.</p>
+                    <p>We build your website, set up AI live chat and phone assistants, and connect your tools.</p>
                 </div>
                 <div class="step-card slide-up">
                     <span class="step-number">03</span>
                     <h3>Launch & Optimise</h3>
-                    <p>We go live, track usage, and refine your flows so every visitor feels guided, not sold to.</p>
+                    <p>We go live, track usage, and refine your setup so customers get a smooth experience.</p>
                 </div>
             </div>
         </div>
@@ -94,56 +102,156 @@
 
     <section id="pricing" class="section pricing fade-in-up">
         <div class="container">
-            <h2 class="section-title">Pricing That Actually Makes Sense</h2>
+            <h2 class="section-title">Simple, Transparent Pricing</h2>
+
             <div class="pricing-grid">
+
                 <div class="price-card slide-up">
-                    <h3>Launch Site</h3>
+                    <h3>Website Setup</h3>
                     <p class="price">£50 one‑time</p>
                     <ul>
-                        <li>Custom Evoxa‑themed website</li>
+                        <li>Custom Evoxa‑branded website</li>
                         <li>Mobile‑ready & fast</li>
-                        <li>Basic analytics setup</li>
-                        <li>AI chat widget installed</li>
+                        <li>SEO‑optimised</li>
+                        <li>AI‑tool ready</li>
                     </ul>
+                    <button class="btn-primary"
+                            onclick="window.open('https://calendly.com/harshal-work-ai64254/evoxa-appointment', '_blank')">
+                        Book Consultation
+                    </button>
                 </div>
+
                 <div class="price-card slide-up">
                     <h3>Site Care</h3>
                     <p class="price">£25 / month</p>
                     <ul>
                         <li>Hosting & maintenance</li>
-                        <li>Content & copy updates</li>
-                        <li>Minor design tweaks</li>
-                        <li>Monitoring & support</li>
+                        <li>Content updates</li>
+                        <li>Security monitoring</li>
+                        <li>Priority support</li>
                     </ul>
+                    <button class="btn-primary" onclick="window.location.href='billing.html'">Subscribe</button>
                 </div>
+
                 <div class="price-card slide-up">
-                    <h3>AI Add‑Ons</h3>
-                    <p class="price">Custom</p>
+                    <h3>AI Tool Setup</h3>
+                    <p class="price">From £50 startup fee</p>
                     <ul>
-                        <li>AI chat assistant (usage‑based)</li>
-                        <li>AI receptionist via partners</li>
-                        <li>Automation flows & follow‑ups</li>
-                        <li>Usage tracking & reporting</li>
+                        <li>Live Chat (ChatBot + LiveChat)</li>
+                        <li>Phone Assistant (Ulio)</li>
+                        <li>Lead capture & CRM sync</li>
+                        <li>Optional ongoing support</li>
                     </ul>
+                    <button class="btn-primary"
+                            onclick="window.open('https://calendly.com/harshal-work-ai64254/evoxa-appointment', '_blank')">
+                        Book AI Setup Call
+                    </button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section id="ai-solutions" class="section fade-in-up">
+        <div class="container">
+            <h2 class="section-title">AI Tools We Set Up for You</h2>
+            <p style="text-align:center; max-width:700px; margin:auto;">
+                Evoxa integrates proven AI platforms like ChatBot, LiveChat, and Ulio — without you needing to manage dashboards or technical settings. We handle setup, onboarding, and support.
+            </p>
+
+            <table class="ai-table">
+                <tr>
+                    <th>Feature</th>
+                    <th>Live Chat<br>(ChatBot + LiveChat)</th>
+                    <th>Phone Assistant<br>(Ulio)</th>
+                </tr>
+                <tr>
+                    <td>24/7 Customer Support</td>
+                    <td>✔</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td>Handles Phone Calls</td>
+                    <td>✖</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td>Books Appointments</td>
+                    <td>✔</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td>Lead Capture</td>
+                    <td>✔</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td>Integrates with Your Website</td>
+                    <td>✔</td>
+                    <td>✔</td>
+                </tr>
+                <tr>
+                    <td>Setup Fee</td>
+                    <td>From £50</td>
+                    <td>From £50</td>
+                </tr>
+                <tr>
+                    <td>Ongoing Cost</td>
+                    <td>Billed by partner</td>
+                    <td>Billed by partner</td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+    <section class="section fade-in-up">
+        <div class="container">
+            <h2 class="section-title">Why Businesses Choose Evoxa</h2>
+
+            <div class="comparison-grid">
+                <div class="comparison-card slide-up">
+                    <h3>⚡ Fast Setup</h3>
+                    <p>Most agencies take weeks. Evoxa launches your website and AI tools in as little as 48 hours.</p>
+                </div>
+                <div class="comparison-card slide-up">
+                    <h3>💸 Fair Pricing</h3>
+                    <p>No £500–£2000 website fees. No bloated retainers. Just simple, honest pricing.</p>
+                </div>
+                <div class="comparison-card slide-up">
+                    <h3>🤝 Trusted AI Partners</h3>
+                    <p>We integrate with ChatBot, LiveChat, and Ulio — tools trusted by real businesses.</p>
+                </div>
+                <div class="comparison-card slide-up">
+                    <h3>📊 Dashboard Access</h3>
+                    <p>Log into your Evoxa account to see usage, leads, and performance in a simple dashboard.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="contact" class="section contact fade-in-up">
+    <section id="account" class="section fade-in-up">
         <div class="container">
-            <h2 class="section-title">Book a Free Launch Call</h2>
-            <p>Tell us about your business and we’ll show you what Evoxa can automate for you.</p>
-            <form id="contactForm">
-                <input type="text" id="name" placeholder="Your Name" required>
-                <input type="text" id="business" placeholder="Business Name" required>
-                <input type="email" id="email" placeholder="Email Address" required>
-                <button type="submit" class="btn-primary">Send</button>
+            <h2 class="section-title">Create Your Evoxa ID</h2>
+            <p style="text-align:center; max-width:700px; margin:auto;">
+                Access your dashboard, billing, analytics, and AI integrations — all in one place.
+            </p>
+
+            <form id="signupForm" class="auth-form">
+                <div class="evoxa-input-group">
+                    <label class="evoxa-label">Email</label>
+                    <input type="email" id="signupEmail" class="evoxa-input" placeholder="you@example.com" required>
+                </div>
+
+                <div class="evoxa-input-group">
+                    <label class="evoxa-label">Password</label>
+                    <input type="password" id="signupPassword" class="evoxa-input" placeholder="••••••••••" required>
+                </div>
+
+                <button type="submit" class="evoxa-btn">Create Account</button>
             </form>
         </div>
     </section>
 
-    <!-- Premium Evoxa Chat Widget -->
     <div id="evoxa-chat-widget">
         <div id="evoxa-chat-button">
             <span>💬</span>
