--- a/index.html
+++ b/index.html
@@ -1,291 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evoxa — Websites & Automation for Small Businesses</title>
+  <meta charset="UTF-8">
+  <title>Evoxa – £50 Websites, AI Live Chat & Voice Receptionists</title>
+  <meta name="description" content="Evoxa builds £50 setup, £25/month websites plus AI live chat and AI voice receptionists for small businesses. We implement trusted AI partner tools so you don’t have to.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 
-    <!-- SEO -->
-    <meta name="description" content="Evoxa builds modern websites and integrates AI tools like live chat and phone assistants for small businesses.">
-    <meta name="keywords" content="Evoxa, AI, automation, website, live chat, AI receptionist, Ulio, ChatBot, LiveChat">
-    <meta name="author" content="Evoxa">
-
-    <!-- Open Graph -->
-    <meta property="og:title" content="Evoxa — Websites & Automation for Small Businesses">
-    <meta property="og:description" content="Professional websites and AI integrations for barbers, salons, trades, clinics, and local businesses.">
-    <meta property="og:type" content="website">
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
+  <!-- AIO / SEO structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Evoxa Automation Studio",
+    "description": "Websites, AI live chat, and AI voice receptionist setups for small businesses. £50 setup, £25/month websites.",
+    "url": "https://evoxa.onrender.com",
+    "serviceArea": {
+      "@type": "AdministrativeArea",
+      "name": "United Kingdom"
+    },
+    "offers": [
+      {
+        "@type": "Offer",
+        "name": "Website setup",
+        "price": "50",
+        "priceCurrency": "GBP",
+        "description": "Website setup for small businesses. £50 setup, £25/month hosting and maintenance."
+      }
+    ]
+  }
+  </script>
 </head>
-<body>
-
-    <div class="starfield"></div>
-    <div class="starfield starfield-2"></div>
-
-    <header class="fade-in">
-        <div class="container nav-container">
-            <div class="logo-wrap">
-                <div class="logo-orbit"></div>
-                <h1 class="logo">Evoxa</h1>
-            </div>
-            <nav>
-                <a href="#features">Features</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#ai-solutions">AI Solutions</a>
-                <a href="contact.html">Contact</a>
-                <a href="login.html" class="cta">Login</a>
-                <a href="billing.html" class="cta">Billing</a>
-            </nav>
-        </div>
-    </header>
-
-    <section class="hero fade-in-up">
-        <div class="container hero-content">
-            <h2>Websites and Automation That Help You Grow</h2>
-            <p>We build fast, modern websites and integrate AI tools like live chat and phone assistants — helping your business respond faster, look more professional, and convert more customers.</p>
-
-            <a href="https://calendly.com/harshal-work-ai64254/evoxa-appointment"
-               class="btn-primary"
-               target="_blank">
-               Book a Free Consultation
-            </a>
-
-            <p class="hero-sub">Perfect for barbers, salons, trades, clinics, and local businesses that want affordable, reliable digital tools.</p>
-        </div>
-    </section>
-
-    <section id="features" class="section features fade-in-up">
-        <div class="container">
-            <h2 class="section-title">What We Set Up for You</h2>
-            <div class="feature-grid">
-                <div class="feature-card slide-up">
-                    <h3>Modern Business Website</h3>
-                    <p>A clean, mobile‑ready website that makes your business look trustworthy and easy to work with.</p>
-                </div>
-                <div class="feature-card slide-up">
-                    <h3>AI Live Chat Setup</h3>
-                    <p>We integrate ChatBot + LiveChat so your visitors get instant answers and smooth handover to you or your team.</p>
-                </div>
-                <div class="feature-card slide-up">
-                    <h3>AI Phone Assistant Setup</h3>
-                    <p>We connect you with AI receptionists via partners like Ulio — handling missed calls, bookings, and follow‑ups automatically.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="how-it-works" class="section how-it-works fade-in-up">
-        <div class="container">
-            <h2 class="section-title">How Evoxa Works</h2>
-            <div class="steps">
-                <div class="step-card slide-up">
-                    <span class="step-number">01</span>
-                    <h3>Discovery</h3>
-                    <p>We learn about your business, services, and what you want customers to experience.</p>
-                </div>
-                <div class="step-card slide-up">
-                    <span class="step-number">02</span>
-                    <h3>Build & Integrate</h3>
-                    <p>We build your website, set up AI live chat and phone assistants, and connect your tools.</p>
-                </div>
-                <div class="step-card slide-up">
-                    <span class="step-number">03</span>
-                    <h3>Launch & Optimise</h3>
-                    <p>We go live, track usage, and refine your setup so customers get a smooth experience.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="pricing" class="section pricing fade-in-up">
-        <div class="container">
-            <h2 class="section-title">Simple, Transparent Pricing</h2>
-
-            <div class="pricing-grid">
-
-                <div class="price-card slide-up">
-                    <h3>Website Setup</h3>
-                    <p class="price">£50 one‑time</p>
-                    <ul>
-                        <li>Custom Evoxa‑branded website</li>
-                        <li>Mobile‑ready & fast</li>
-                        <li>SEO‑optimised</li>
-                        <li>AI‑tool ready</li>
-                    </ul>
-                    <button class="btn-primary"
-                            onclick="window.open('https://calendly.com/harshal-work-ai64254/evoxa-appointment', '_blank')">
-                        Book Consultation
-                    </button>
-                </div>
-
-                <div class="price-card slide-up">
-                    <h3>Site Care</h3>
-                    <p class="price">£25 / month</p>
-                    <ul>
-                        <li>Hosting & maintenance</li>
-                        <li>Content updates</li>
-                        <li>Security monitoring</li>
-                        <li>Priority support</li>
-                    </ul>
-                    <button class="btn-primary" onclick="window.location.href='billing.html'">Subscribe</button>
-                </div>
-
-                <div class="price-card slide-up">
-                    <h3>AI Tool Setup</h3>
-                    <p class="price">From £50 startup fee</p>
-                    <ul>
-                        <li>Live Chat (ChatBot + LiveChat)</li>
-                        <li>Phone Assistant (Ulio)</li>
-                        <li>Lead capture & CRM sync</li>
-                        <li>Optional ongoing support</li>
-                    </ul>
-                    <button class="btn-primary"
-                            onclick="window.open('https://calendly.com/harshal-work-ai64254/evoxa-appointment', '_blank')">
-                        Book AI Setup Call
-                    </button>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <section id="ai-solutions" class="section fade-in-up">
-        <div class="container">
-            <h2 class="section-title">AI Tools We Set Up for You</h2>
-            <p style="text-align:center; max-width:700px; margin:auto;">
-                Evoxa integrates proven AI platforms like ChatBot, LiveChat, and Ulio — without you needing to manage dashboards or technical settings. We handle setup, onboarding, and support.
-            </p>
-
-            <table class="ai-table">
-                <tr>
-                    <th>Feature</th>
-                    <th>Live Chat<br>(ChatBot + LiveChat)</th>
-                    <th>Phone Assistant<br>(Ulio)</th>
-                </tr>
-                <tr>
-                    <td>24/7 Customer Support</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                </tr>
-                <tr>
-                    <td>Handles Phone Calls</td>
-                    <td>✖</td>
-                    <td>✔</td>
-                </tr>
-                <tr>
-                    <td>Books Appointments</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                </tr>
-                <tr>
-                    <td>Lead Capture</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                </tr>
-                <tr>
-                    <td>Integrates with Your Website</td>
-                    <td>✔</td>
-                    <td>✔</td>
-                </tr>
-                <tr>
-                    <td>Setup Fee</td>
-                    <td>From £50</td>
-                    <td>From £50</td>
-                </tr>
-                <tr>
-                    <td>Ongoing Cost</td>
-                    <td>Billed by partner</td>
-                    <td>Billed by partner</td>
-                </tr>
-            </table>
-        </div>
-    </section>
-
-    <section class="section fade-in-up">
-        <div class="container">
-            <h2 class="section-title">Why Businesses Choose Evoxa</h2>
-
-            <div class="comparison-grid">
-                <div class="comparison-card slide-up">
-                    <h3>⚡ Fast Setup</h3>
-                    <p>Most agencies take weeks. Evoxa launches your website and AI tools in as little as 48 hours.</p>
-                </div>
-                <div class="comparison-card slide-up">
-                    <h3>💸 Fair Pricing</h3>
-                    <p>No £500–£2000 website fees. No bloated retainers. Just simple, honest pricing.</p>
-                </div>
-                <div class="comparison-card slide-up">
-                    <h3>🤝 Trusted AI Partners</h3>
-                    <p>We integrate with ChatBot, LiveChat, and Ulio — tools trusted by real businesses.</p>
-                </div>
-                <div class="comparison-card slide-up">
-                    <h3>📊 Dashboard Access</h3>
-                    <p>Log into your Evoxa account to see usage, leads, and performance in a simple dashboard.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="account" class="section fade-in-up">
-        <div class="container">
-            <h2 class="section-title">Create Your Evoxa ID</h2>
-            <p style="text-align:center; max-width:700px; margin:auto;">
-                Access your dashboard, billing, analytics, and AI integrations — all in one place.
-            </p>
-
-            <form id="signupForm" class="auth-form">
-                <div class="evoxa-input-group">
-                    <label class="evoxa-label">Email</label>
-                    <input type="email" id="signupEmail" class="evoxa-input" placeholder="you@example.com" required>
-                </div>
-
-                <div class="evoxa-input-group">
-                    <label class="evoxa-label">Password</label>
-                    <input type="password" id="signupPassword" class="evoxa-input" placeholder="••••••••••" required>
-                </div>
-
-                <button type="submit" class="evoxa-btn">Create Account</button>
-            </form>
-        </div>
-    </section>
-
-    <div id="evoxa-chat-widget">
-        <div id="evoxa-chat-button">
-            <span>💬</span>
-        </div>
-
-        <div id="evoxa-chat-window">
-            <div id="evoxa-chat-header">
-                <div class="chat-header-left">
-                    <div class="chat-avatar">E</div>
-                    <div>
-                        <h3>Evoxa Assistant</h3>
-                        <p>AI Support • Online</p>
-                    </div>
-                </div>
-                <div class="chat-header-right">
-                    <span class="chat-dot"></span>
-                </div>
-            </div>
-
-            <div id="evoxa-chat-messages"></div>
-
-            <div id="evoxa-chat-typing">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-            </div>
-
-            <div id="evoxa-chat-input-area">
-                <input id="evoxa-chat-input" placeholder="Ask Evoxa anything...">
-                <button id="evoxa-chat-send">➤</button>
-            </div>
-        </div>
+<body class="gradient-bg">
+<header class="hero">
+  <div class="hero-inner fade-in-up">
+    <h1>£50 Websites, AI Live Chat & Voice Receptionists</h1>
+    <p>We build your website, plug in AI live chat and AI voice receptionists using trusted partners, and keep everything simple and affordable for small businesses.</p>
+    <div class="hero-actions">
+      <a href="billing.html" class="btn primary">Get a website for £50</a>
+      <a href="contact.html" class="btn secondary">Contact us</a>
+      <a href="partnerships.html" class="btn ghost">Partner with Evoxa</a>
+      <a href="https://calendly.com/harshal-work-ai64254/evoxa-appointment" class="btn outline" target="_blank">Book a meeting</a>
     </div>
+  </div>
+</header>
 
-    <script src="script.js"></script>
+<section class="section fade-in-up">
+  <h2>What Evoxa sets up for you</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Websites</h3>
+      <p>Modern, fast, mobile‑friendly websites built for real small businesses.</p>
+      <p class="price">£50 setup · £25/month</p>
+    </div>
+    <div class="card">
+      <h3>AI live chat</h3>
+      <p>AI chat assistants configured using partner tools, tuned to your FAQs and processes.</p>
+      <p class="note">Pricing on call</p>
+    </div>
+    <div class="card">
+      <h3>AI voice receptionist</h3>
+      <p>Phone receptionist flows for bookings, FAQs, and routing—implemented via trusted AI partners.</p>
+      <p class="note">Pricing on call</p>
+    </div>
+  </div>
+</section>
+
+<section class="section fade-in-up">
+  <h2>How Evoxa compares</h2>
+  <p>We’re cheaper than typical agencies and easier than DIY AI tools—while still doing the setup for you.</p>
+
+  <div class="table-wrapper">
+    <table class="compare-table">
+      <thead>
+        <tr>
+          <th>Feature</th>
+          <th>Evoxa</th>
+          <th>Typical web agency</th>
+          <th>DIY AI tools</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Website pricing</td>
+          <td>£50 setup, £25/month</td>
+          <td>£500–£3,000+ upfront, retainers</td>
+          <td>No website, just tools</td>
+        </tr>
+        <tr>
+          <td>AI live chat</td>
+          <td>We implement partner tools for you</td>
+          <td>Often not offered or bolted on</td>
+          <td>You configure everything yourself</td>
+        </tr>
+        <tr>
+          <td>AI voice receptionist</td>
+          <td>We design flows and set up partners</td>
+          <td>Rarely offered</td>
+          <td>DIY, no guidance</td>
+        </tr>
+        <tr>
+          <td>Ongoing changes</td>
+          <td>We adjust as your business changes</td>
+          <td>Slow and expensive</td>
+          <td>You do it all manually</td>
+        </tr>
+        <tr>
+          <td>Who does the work?</td>
+          <td>Evoxa implements, partners power the AI</td>
+          <td>In‑house devs, high cost</td>
+          <td>Just software, no implementation</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="cta-row">
+    <a href="https://calendly.com/harshal-work-ai64254/evoxa-appointment" target="_blank" class="btn primary">Book a meeting</a>
+    <a href="contact.html" class="btn secondary">Contact us</a>
+  </div>
+</section>
+
+<footer class="footer slide-up">
+  <p>© Evoxa Automation Studio</p>
+  <div class="footer-links">
+    <a href="login.html">Login</a>
+    <a href="signup.html">Create ID</a>
+    <a href="contact.html">Contact</a>
+    <a href="billing.html">Billing</a>
+    <a href="partnerships.html">Partnerships</a>
+  </div>
+</footer>
+
+<!-- Chat widget -->
+<div id="evoxa-chat-button">Chat with Evoxa</div>
+<div id="evoxa-chat-window">
+  <div class="evoxa-chat-header">
+    <span>Evoxa Assistant</span>
+    <button id="evoxa-chat-close" class="chat-close">×</button>
+  </div>
+  <div id="evoxa-chat-messages" class="evoxa-chat-messages"></div>
+  <div id="evoxa-chat-typing">Evoxa is typing…</div>
+  <div class="evoxa-chat-input-row">
+    <input id="evoxa-chat-input" type="text" placeholder="Ask about websites, AI chat, or voice">
+    <button id="evoxa-chat-send">Send</button>
+  </div>
+</div>
+
+<!-- Email popup -->
+<div id="emailPopup" class="popup-overlay">
+  <div class="popup-box">
+    <h2>Email sent</h2>
+    <p>We’ve sent a message to your inbox.<br>Check spam or junk just in case.</p>
+    <div class="popup-buttons">
+      <button id="resendEmailBtn">Resend email</button>
+      <button id="closePopupBtn">Close</button>
+    </div>
+  </div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
