--- a/contact.html
+++ b/contact.html
@@ -1,63 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Contact Evoxa</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Contact Evoxa – Websites & AI Automation</title>
+  <meta name="description" content="Contact Evoxa to discuss £50 websites, AI live chat, and AI voice receptionist setups for your business.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
-<div class="starfield"></div>
-<div class="starfield starfield-2"></div>
-
-<header class="fade-in">
-    <div class="container nav-container">
-        <div class="logo-wrap">
-            <div class="logo-orbit"></div>
-            <h1 class="logo">Evoxa</h1>
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="billing.html" class="cta">Billing</a>
-        </nav>
-    </div>
+<body class="gradient-bg">
+<header class="simple-header">
+  <a href="index.html" class="logo-link">← Back to Evoxa</a>
 </header>
 
-<section class="section fade-in-up">
-    <div class="container">
-        <h2 class="section-title">Contact Us</h2>
-        <p style="text-align:center; max-width:700px; margin:auto;">
-            Have a question? Want to work with us?  
-            Send us a message and we’ll get back to you shortly.
-        </p>
+<main class="contact-container fade-in-up">
+  <h1>Talk to Evoxa</h1>
+  <p>Tell us what you’re trying to automate and we’ll reply with a clear, practical plan.</p>
 
-        <form id="contactUsForm" class="auth-form">
+  <div class="cta-row">
+    <a href="https://calendly.com/harshal-work-ai64254/evoxa-appointment" target="_blank" class="btn primary">Book a meeting</a>
+  </div>
 
-            <div class="evoxa-input-group">
-                <label class="evoxa-label">Your Name</label>
-                <input type="text" id="cuName" class="evoxa-input" placeholder="John Doe" required>
-            </div>
+  <form id="contactUsForm" class="contact-form" style="margin-top:20px;">
+    <label for="cuName">Name</label>
+    <input type="text" id="cuName" required>
 
-            <div class="evoxa-input-group">
-                <label class="evoxa-label">Email Address</label>
-                <input type="email" id="cuEmail" class="evoxa-input" placeholder="you@example.com" required>
-            </div>
+    <label for="cuEmail">Email</label>
+    <input type="email" id="cuEmail" required>
 
-            <div class="evoxa-input-group">
-                <label class="evoxa-label">Phone Number</label>
-                <input type="text" id="cuPhone" class="evoxa-input" placeholder="+44 7123 456789" required>
-            </div>
+    <label for="cuPhone">Phone (optional)</label>
+    <input type="tel" id="cuPhone">
 
-            <div class="evoxa-input-group">
-                <label class="evoxa-label">Message</label>
-                <textarea id="cuMessage" class="evoxa-input" style="height:120px;" placeholder="How can we help?" required></textarea>
-            </div>
+    <label for="cuMessage">What are you trying to automate?</label>
+    <textarea id="cuMessage" rows="5" required></textarea>
 
-            <button type="submit" class="evoxa-btn">Send Message</button>
-        </form>
+    <button type="submit" class="btn primary">Send message</button>
+  </form>
+</main>
+
+<div id="emailPopup" class="popup-overlay">
+  <div class="popup-box">
+    <h2>Message sent</h2>
+    <p>We’ve received your message.<br>We’ll reply to your inbox soon—check spam just in case.</p>
+    <div class="popup-buttons">
+      <button id="closePopupBtn">Close</button>
     </div>
-</section>
+  </div>
+</div>
 
 <script src="script.js"></script>
 </body>
