--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login – Evoxa ID</title>
+    <title>Create Evoxa ID</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,27 +12,27 @@
 </header>
 
 <main class="auth-container fade-in-up">
-    <h1>Log in to Evoxa</h1>
-    <p>Access your automation setups and requests.</p>
+    <h1>Create your Evoxa ID</h1>
+    <p>Use this account to manage your automation setups and requests.</p>
 
-    <form id="loginForm" class="auth-form">
-        <label for="loginEmail">Email</label>
-        <input type="email" id="loginEmail" required>
+    <form id="signupForm" class="auth-form">
+        <label for="signupEmail">Email</label>
+        <input type="email" id="signupEmail" required>
 
-        <label for="loginPassword">Password</label>
-        <input type="password" id="loginPassword" required>
+        <label for="signupPassword">Password</label>
+        <input type="password" id="signupPassword" required>
 
-        <button type="submit" class="btn primary">Log in</button>
+        <button type="submit" class="btn primary">Create account</button>
     </form>
 
-    <p class="auth-alt">New here? <a href="signup.html">Create an Evoxa ID</a></p>
+    <p class="auth-alt">Already have an account? <a href="login.html">Log in</a></p>
 </main>
 
 <!-- Email popup -->
 <div id="emailPopup" class="popup-overlay">
     <div class="popup-box">
         <h2>Email sent</h2>
-        <p>If this is a new account, we’ve sent a verification email.<br>
+        <p>We’ve sent a verification email to your inbox.<br>
         Make sure to check your spam or junk folder.</p>
         <div class="popup-buttons">
             <button id="resendEmailBtn">Resend email</button>
