--- a/contact.html
+++ b/contact.html
@@ -240,6 +240,30 @@
 
         </div>
     </main>
+    <!-- Book a Meeting Section -->
+    <section class="py-24 relative z-10 bg-evoxa-dark border-y border-white/5">
+        <div class="max-w-5xl mx-auto px-6 text-center">
+        
+            <div class="mb-10">
+                <h2 class="font-display text-4xl md:text-5xl font-bold mb-4">
+                    Ready to See What Evoxa Can Do?
+                </h2>
+                <p class="text-gray-400 text-lg max-w-2xl mx-auto">
+                    Book a quick call with us and get a personalised walkthrough of how automation, AI, and a modern website can transform your business.
+                </p>
+            </div>
+
+            <a href="https://calendly.com/harshal-work-ai64254/evoxa-appointment" 
+               class="inline-flex items-center gap-3 px-8 py-4 bg-evoxa-primary text-white font-semibold rounded-full hover:bg-evoxa-primary/90 transition-all shadow-[0_0_20px_rgba(124,58,237,0.3)] hover:scale-105">
+                Book a Meeting
+                <i data-lucide="calendar" class="w-5 h-5"></i>
+            </a>
+
+            <p class="text-gray-500 text-sm mt-4">
+                No pressure. No sales pitch. Just ideas.
+            </p>
+        </div>
+    </section>
     <!-- FOOTER -->
     <footer class="border-t border-white/10 bg-black pt-16 pb-8 relative overflow-hidden">
         <div class="absolute top-0 left-1/2 -translate-x-1/2 w-[500px] h-[1px] bg-gradient-to-r from-transparent via-evoxa-primary to-transparent opacity-50"></div>
