--- a/pricing.html
+++ b/pricing.html
@@ -179,7 +179,7 @@
                 <a href="index.html#ai-solutions" class="hover:text-white transition-colors">AI Solutions</a>
                 <a href="pricing.html" class="hover:text-white transition-colors">Pricing</a>
 		<a href="contact.html" class="hover:text-white transition-colors">Contact Us</a>
-                <a href="https://billing.stripe.com/p/login/placeholder" target="_blank" class="text-evoxa-accent hover:text-white transition-colors">Manage Subscription</a>
+                <a href="https://billing.stripe.com/p/login/00w9AU7HmciC8ETfwO6g800" target="_blank" class="text-evoxa-accent hover:text-white transition-colors">Manage Subscription</a>
             </div>
 
             <div class="flex items-center gap-4">
